--- a/index.html
+++ b/index.html
@@ -90,19 +90,9 @@
                   </div>
                 </fieldset>
                 <div class="form-group row">
-                  <div class="col-sm-2">Checkbox</div>
+                  <label for="inputDue3" class="col-sm-2 col-form-label">Due Date:</label>
                   <div class="col-sm-10">
-                    <div class="form-check">
-                      <input class="form-check-input" type="checkbox" id="gridCheck1">
-                      <label class="form-check-label" for="gridCheck1">
-                        Example checkbox
-                      </label>
-                    </div>
-                  </div>
-                </div>
-                <div class="form-group row">
-                  <div class="col-sm-10">
-                    <button type="submit" class="btn btn-primary">Sign in</button>
+                    <input type="date" class="form-control" id="inputDue3" placeholder="Due Date">
                   </div>
                 </div>
               </form>
@@ -114,24 +104,31 @@
           </div>
         </div>
       </div>
-    
-    <div>
-        <h3>To Do</h3>
-    </div>
-
-    <div>
-        <h3>In Progress</h3>
-    </div>
-
-    <div>
-        <h3>Review</h3>
-    </div>
-
-    <div>
-        <h3>Done</h3>
-    </div>
-    
-
+      <div class="card-group">
+        <div class="card">
+          <div class="card-body">
+            <h3 class="card-title">TO DO</h3>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-body">
+            <h3 class="card-title">IN PROGRESS</h3>
+            <p> </p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-body">
+            <h3 class="card-title">REVIEW</h3>
+            <p> </p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-body">
+            <h3 class="card-title">DONE</h3>
+          </div>
+        </div>
+      </div>
+   
 
 
 
