Added basic dropdown list for assigned to option

--- a/index.html
+++ b/index.html
@@ -95,6 +95,15 @@
                     <input type="date" class="form-control" id="inputDue3" placeholder="Due Date">
                   </div>
                 </div>
+                <div>
+                <label for="team">Assigned to:</label>
+                  <select id="team" name="team">
+                  <option value="Craig">Craig</option>
+                  <option value="Nicole">Nicole</option>
+                  <option value="Hannah">Hannah</option>
+                  <option value="Lucky">Lucky</option>
+                  </select>
+                </div>
               </form>
             </div>
             <div class="modal-footer">
