--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="modal-dialog modal-dialog-centered" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalCenterTitle">Modal title</h5>
+              <h5 class="modal-title" id="exampleModalCenterTitle">Add a task</h5>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
@@ -41,59 +41,39 @@
             <div class="modal-body">
               <form>
                 <div class="form-group row">
-                  <label for="inputName3" class="col-sm-2 col-form-label">Name</label>
+                  <label for="inputName3" class="col-sm-2 col-form-label">Name:</label>
                   <div class="col-sm-10">
                     <input type="text" class="form-control" id="inputName3" placeholder="Name">
                   </div>
                 </div>
                 <div class="form-group row">
-                  <label for="inputDescription3" class="col-sm-2 col-form-label">Description</label>
+                  <label for="inputDescription3" class="col-sm-2 col-form-label">Description:</label>
                   <div class="col-sm-10">
-                    <input type="text" class="form-control" id="inputDescription3" placeholder="Description">
+                    <textarea id="description" name="description" rows="4" cols="50" placeholder="Description" value>
+                    </textarea>
                   </div>
                 </div>
-                <fieldset class="form-group">
-                  <div class="row">
-                    <legend class="col-form-label col-sm-2 pt-0">Assigned to:</legend>
-                    <div class="col-sm-10">
-                      <div class="form-check">
-                        <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
-                        <label class="form-check-label" for="gridRadios1">
-                          Bart
-                        </label>
-                      </div>
-                      <div class="form-check">
-                        <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
-                        <label class="form-check-label" for="gridRadios2">
-                          Homer
-                        </label>
-                      </div>
-                      <div class="form-check">
-                        <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3" value="option3">
-                        <label class="form-check-label" for="gridRadios3">
-                          Marge
-                        </label>
-                      </div>
-                      <div class="form-check">
-                        <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios4" value="option4">
-                        <label class="form-check-label" for="gridRadios4">
-                          Lisa
-                        </label>
-                      </div>
-                      <div class="form-check">
-                        <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios5" value="option5">
-                        <label class="form-check-label" for="gridRadios5">
-                          Maggie
-                        </label>
-                      </div>
-                    </div>
-                  </div>
-                </fieldset>
                 <div class="form-group row">
                   <label for="inputDue3" class="col-sm-2 col-form-label">Due Date:</label>
                   <div class="col-sm-10">
                     <input type="date" class="form-control" id="inputDue3" placeholder="Due Date">
                   </div>
+                </div>
+                <div class="form-group row">
+                  <label for="inputStatus3" class="col-sm-2 col-form-label">Status:</label>
+                  <div class="col-sm-10">
+                    <input type="radio" class="form-control" id="inputDue3" placeholder="Due Date">
+                  </div>
+                </div>
+                <div>
+                  <label for="status">Status</label>
+                  <select id="setStatus" name="status">
+                    <option value>Select Status</option>
+                    <option value="modalToDo">To Do</option>
+                    <option value="modalInProgress">In Progress</option>
+                    <option value="modalReview">Review</option>
+                    <option value="modalDone">Done</option>
+                  </select>
                 </div>
                 <div>
                 <label for="team">Assigned to:</label>
@@ -101,21 +81,21 @@
                   <option value="Craig">Craig</option>
                   <option value="Nicole">Nicole</option>
                   <option value="Hannah">Hannah</option>
-                  <option value="Lucky">Lucky</option>
                   </select>
                 </div>
-              </form>
+                
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Save changes</button>
+              <button type="button" class="btn btn-primary">Save task</button>
             </div>
+                </form>
           </div>
         </div>
       </div>
       <div class="card-group">
         <div class="card">
-          <div class="card-body">
+          <div class="card-body" id="to-do">
             <h3 class="card-title">TO DO</h3>
           </div>
         </div>
@@ -138,7 +118,12 @@
         </div>
       </div>
    
-
+<div class="row">
+  <div class="column">To-do</div>
+  <div class="column">In Progress</div>
+  <div class="column">Review</div>
+  <div class="column">Done</div>
+</div>
 
 
 	<script src="index.js"></script>
@@ -148,6 +133,6 @@
   </body>
 
   <footer>
-
+  
   </footer>
 </html>
